Added comments to give the user an idea how long a cell will take to run

--- a/KNN/knn_implementation/knn.ipynb
+++ b/KNN/knn_implementation/knn.ipynb
@@ -360,6 +360,7 @@
     }
    ],
    "source": [
+    "# This takes about thirty seconds to run on my Apple M2 Chip Macbook Air...\n",
     "trainer = KNearesetNeighborsTrainer(file_name=\"labeled-examples\", delimiter=\" \", id_column_name=\"id\", classification_column_name=\"class\", k=10, n=5)\n",
     "trainer.train_all()\n",
     "trainer.plot_predictions()"
@@ -406,6 +407,7 @@
     }
    ],
    "source": [
+    "# This takes less time to train because of the lower training complexity - we're talking around twenty seconds in total on my computer.\n",
     "trainer = KNearesetNeighborsTrainer(file_name=\"labeled-examples\", delimiter=\" \", id_column_name=\"id\", classification_column_name=\"class\", k=10, n=5)\n",
     "trainer.train_error()\n",
     "trainer.plot_predictions()"
@@ -432,6 +434,7 @@
     }
    ],
    "source": [
+    "# This completes in a little over 2 minutes on my Apple M2 Chip Macbook Air...\n",
     "trainer = KNearesetNeighborsTrainer(file_name=\"winequality.csv\", delimiter=\";\", id_column_name=\"\\\"id\\\"\", classification_column_name=\"\\\"type\\\"\", k=10, n=5)\n",
     "trainer.train_all()"
    ]
@@ -457,6 +460,7 @@
     }
    ],
    "source": [
+    "# Due to lower training complexity, this takes marginally less time, but the setup is still O(n^2)...\n",
     "trainer = KNearesetNeighborsTrainer(file_name=\"winequality.csv\", delimiter=\";\", id_column_name=\"\\\"id\\\"\", classification_column_name=\"\\\"type\\\"\", k=10, n=5)\n",
     "trainer.train_error()"
    ]
