--- a/KNN and Local Search/local_search.ipynb
+++ b/KNN and Local Search/local_search.ipynb
@@ -547,25 +547,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The code for Simulated Annealing follows..."
+    "# Now we will be implementing local search..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import itertools\n",
-    "from math import exp\n",
+    "from abc import abstractmethod\n",
     "from typing import Type\n",
-    "import random\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import cm\n",
     "\n",
-    "class SimulatedAnnealingSolver:\n",
-    "    \"\"\"Uses the simulated-annealing algorithm with a given scheduling function to estimate a maximum for a function\n",
+    "class FunctionOptimizer:\n",
+    "    \"\"\"We will extend this class in two ways - a Simulated Annealing Solver and Genetic Algorithm Solver\n",
     "    \"\"\"\n",
     "\n",
     "    def function_template(x: np.array) -> float:\n",
@@ -573,44 +570,12 @@
     "        \"\"\"\n",
     "        return np.linalg.norm(x)\n",
     "    \n",
-    "    def __init__(self, schedule_func: Type[function_template], tolerance=0.000001, step_scale = 0.5):\n",
-    "        \"\"\"Given a certain time - as an integer - return a temperature float, which determines how likely we are to change positions.\n",
-    "        The schedule function gives a temperature at a given integer input time.\n",
-    "        The tolerance if how close we let the temperature reach 0 before deciding we are done.\n",
-    "        The step_scale decides how massive our random steps are as we attempt to maximize our function\n",
-    "        \"\"\"\n",
-    "        self.schedule_func = schedule_func\n",
-    "        self.tolerance = tolerance\n",
-    "        self.step_scale = step_scale\n",
-    "\n",
+    "    @abstractmethod\n",
     "    def maximize(self, function: type[function_template], x_min: np.array, x_max: np.array) -> tuple[np.array, float]:\n",
-    "        \"\"\"Here is the actual algorithm to maximize a function \n",
+    "        \"\"\"Extensions of this class must define this method \n",
     "        \"\"\"\n",
-    "        current = (x_min + x_max) / 2\n",
-    "        t = 0\n",
-    "        while True:\n",
-    "            temperature = self.schedule_func(t)\n",
-    "            t += 1\n",
-    "            if temperature <= self.tolerance:\n",
-    "                return current, function(current)\n",
-    "            else:\n",
-    "                next = self.random_step(current)\n",
-    "                delta = function(next) - function(current)\n",
-    "                if delta > 0:\n",
-    "                    # If the random change in position resulted in a positive change, we will definitely take the step in that direction\n",
-    "                    current = next\n",
-    "                else:\n",
-    "                    # We only have a certain chance of taking it\n",
-    "                    prob = exp(delta / temperature)\n",
-    "                    if random.random() <= prob:\n",
-    "                        current = next\n",
-    "    \n",
-    "    def random_step(self, x: np.array) -> np.array:\n",
-    "        \"\"\"Take a step away from the input in a random direction\n",
-    "        \"\"\"\n",
-    "        change = np.random.rand(x.shape[0]) * self.step_scale\n",
-    "        return x + change\n",
-    "    \n",
+    "        pass\n",
+    "\n",
     "    def plot_max(self, function: Type[function_template], x_min: float, x_max: float, y_min: float, y_max: float, title: str):\n",
     "        \"\"\"Estimate the maximum achievable value of our function, and plot the result\n",
     "        \"\"\"\n",
@@ -647,15 +612,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The code for Simulated Annealing follows..."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import exp\n",
+    "from typing import Type\n",
+    "import random\n",
+    "import numpy as np\n",
+    "\n",
+    "class SimulatedAnnealingSolver(FunctionOptimizer):\n",
+    "    \"\"\"Uses the simulated-annealing algorithm with a given scheduling function to estimate a maximum for a function\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self, schedule_func: Type[FunctionOptimizer.function_template], tolerance=0.000001, step_scale = 0.5):\n",
+    "        \"\"\"Given a certain time - as an integer - return a temperature float, which determines how likely we are to change positions.\n",
+    "        The schedule function gives a temperature at a given integer input time.\n",
+    "        The tolerance if how close we let the temperature reach 0 before deciding we are done.\n",
+    "        The step_scale decides how massive our random steps are as we attempt to maximize our function\n",
+    "        \"\"\"\n",
+    "        self.schedule_func = schedule_func\n",
+    "        self.tolerance = tolerance\n",
+    "        self.step_scale = step_scale\n",
+    "\n",
+    "    def maximize(self, function: type[FunctionOptimizer.function_template], x_min: np.array, x_max: np.array) -> tuple[np.array, float]:\n",
+    "        \"\"\"Here is the actual algorithm to maximize a function \n",
+    "        \"\"\"\n",
+    "        current = (x_min + x_max) / 2\n",
+    "        t = 0\n",
+    "        while True:\n",
+    "            temperature = self.schedule_func(t)\n",
+    "            t += 1\n",
+    "            if temperature <= self.tolerance:\n",
+    "                return current, function(current)\n",
+    "            else:\n",
+    "                next = self.random_step(current)\n",
+    "                delta = function(next) - function(current)\n",
+    "                if delta > 0:\n",
+    "                    # If the random change in position resulted in a positive change, we will definitely take the step in that direction\n",
+    "                    current = next\n",
+    "                else:\n",
+    "                    # We only have a certain chance of taking it\n",
+    "                    prob = exp(delta / temperature)\n",
+    "                    if random.random() <= prob:\n",
+    "                        current = next\n",
+    "    \n",
+    "    def random_step(self, x: np.array) -> np.array:\n",
+    "        \"\"\"Take a step away from the input in a random direction\n",
+    "        \"\"\"\n",
+    "        change = np.random.rand(x.shape[0]) * self.step_scale\n",
+    "        return x + change"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[9.3707421 8.3250633] 0.04159148579416225\n"
+      "[9.43311659 8.57533007] 0.02068951639040595\n"
      ]
     },
     {
@@ -680,6 +706,48 @@
    "metadata": {},
    "source": [
     "# The code for Genetic Algorithms follows..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "from math import exp\n",
+    "from typing import Type\n",
+    "import numpy as np\n",
+    "\n",
+    "class GeneticAlgorithmSolver(FunctionOptimizer):\n",
+    "    \"\"\"Uses a genetic algorithm to estimate a maximum for a function\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        \"\"\"\n",
+    "        \"\"\"\n",
+    "        pass\n",
+    "\n",
+    "    def maximize(self, function: Type[FunctionOptimizer.function_template], x_min: np.array, x_max: np.array) -> tuple[np.array, float]:\n",
+    "        \"\"\"Here is the actual genetic algorithm to maximize a function \n",
+    "        \"\"\"\n",
+    "        pass\n",
+    "    \n",
+    "    def reproduce(self, x: np.array, y: np.array) -> np.array:\n",
+    "        \"\"\"Given two array inputs, create offspring from the two of them\n",
+    "        \"\"\"\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "solver = SimulatedAnnealingSolver(lambda n : exp(-n/10), step_scale=0.1)\n",
+    "\n",
+    "solver.plot_max(function=bump, x_min=0.1, x_max=10, y_min=0.1, y_max=10, title=\"Bump Function\")"
    ]
   }
  ],
