best shot at genetic algorithm

--- a/KNN and Local Search/knn.ipynb
+++ b/KNN and Local Search/knn.ipynb
@@ -138,7 +138,7 @@
     "\n",
     "        print(\"Training structure set up!\")\n",
     "    \n",
-    "    class _DistancedNode:\n",
+    "    class __DistancedNode:\n",
     "        \"\"\"This inner class is an object that has two attributes - a position label and a given distance from that position from a certain other point that this class does not need to know about\n",
     "        \"\"\"\n",
     "        def __init__(self, id : str, dist : float):\n",
@@ -154,7 +154,7 @@
     "        def __lt__(self, other):\n",
     "            return self.dist < other.dist\n",
     "                    \n",
-    "    def _train_store_all(self, i : int):\n",
+    "    def __train_store_all(self, i : int):\n",
     "        \"\"\"Perform the 'store all' variant of the k-nearest-neighbors training on the ith block of data\n",
     "\n",
     "        Args:\n",
@@ -177,10 +177,10 @@
     "                            self.block_queues[i][name_1].put(self._DistancedNode(id=name_2, dist=self.distances[name_1][name_2]))\n",
     "        \n",
     "        # Now that the queues are completed, train on them\n",
-    "        self._train(block_idx=i, queue_list=self.block_queues)\n",
+    "        self.__train(block_idx=i, queue_list=self.block_queues)\n",
     "        \n",
     "        \n",
-    "    def _train_store_errors(self, i : int):\n",
+    "    def __train_store_errors(self, i : int):\n",
     "        \"\"\"Perform the 'store errors' variant of the k-nearest-neighbors training on the ith block of data\n",
     "\n",
     "        Args:\n",
@@ -206,7 +206,7 @@
     "                                elif points_in_queue[other_value] < self.k:\n",
     "                                    points_in_queue[other_value] += 1\n",
     "                                    self.used_in_queue[this_name][other_name] = True\n",
-    "                                    self.error_block_queues[i][this_name].put(self._DistancedNode(id=other_name, dist=self.distances[this_name][other_name]))\n",
+    "                                    self.error_block_queues[i][this_name].put(self.__DistancedNode(id=other_name, dist=self.distances[this_name][other_name]))\n",
     "        \n",
     "        # That's an initialization of the priority queue for each point in this block completed\n",
     "        # Now we need to add all mis-classified points from different blocks into each point's queue from this block\n",
@@ -217,10 +217,10 @@
     "                    for other_name in miss_classified_in_block:\n",
     "                        if not self.used_in_queue[this_name][other_name]:\n",
     "                            self.used_in_queue[this_name][other_name] = True\n",
-    "                            self.error_block_queues[i][this_name].put(self._DistancedNode(id=other_name, dist=self.distances[this_name][other_name]))\n",
+    "                            self.error_block_queues[i][this_name].put(self.__DistancedNode(id=other_name, dist=self.distances[this_name][other_name]))\n",
     "    \n",
     "        # Now that the queues are complete, train on them\n",
-    "        self._train(block_idx=i, queue_list=self.error_block_queues)\n",
+    "        self.__train(block_idx=i, queue_list=self.error_block_queues)\n",
     "        \n",
     "        # Since this is error training, every point in this block which we have miss-classified, we mark as such so that points from other blocks can throw each miss-classified point from this block into their queue\n",
     "        for point_row in self.split_data[i]:\n",
@@ -230,7 +230,7 @@
     "            elif this_name in self.miss_classified[i]:\n",
     "                self.miss_classified[i].remove(this_name)\n",
     "    \n",
-    "    def _train(self, block_idx: int, queue_list: list[PriorityQueue]):\n",
+    "    def __train(self, block_idx: int, queue_list: list[PriorityQueue]):\n",
     "        \"\"\"Given a list of queues by the block, and the right block index, this algorithm empties (and replaces) k points from each queue to classify the queue's respective point\n",
     "\n",
     "        Args:\n",
@@ -272,7 +272,7 @@
     "        \"\"\"\n",
     "        acc_test = 0\n",
     "        for i in range(len(self.split_data)):\n",
-    "            self._train_store_all(i)\n",
+    "            self.__train_store_all(i)\n",
     "            acc_test += sum([1 for row in self.split_data[i] if (self.predictions[row[self.id_column_name]] == row[self.classification_column_name])]) / len(self.split_data[i])\n",
     "        print(acc_test/len(self.split_data))\n",
     "    \n",
@@ -281,7 +281,7 @@
     "        \"\"\"\n",
     "        acc_test = 0\n",
     "        for i in range(len(self.split_data)):\n",
-    "            self._train_store_errors(i)\n",
+    "            self.__train_store_errors(i)\n",
     "            acc_test += sum([1 for row in self.split_data[i] if (self.predictions[row[self.id_column_name]] == row[self.classification_column_name])]) / len(self.split_data[i])\n",
     "        print(acc_test/len(self.split_data))\n",
     "    \n",
