figure out row index for cell

--- a/Constraint Satisfaction/csp.ipynb
+++ b/Constraint Satisfaction/csp.ipynb
@@ -556,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -581,49 +581,31 @@
       "[7, 0, 2, 11, 12, 6, 8, 16, 15, 1, 9, 3, 4, 14, 10, 13]\n",
       "\n",
       "\n",
-      "[1, 9, 10, 13, 3, 5, 2, 6, 4, 0, 16, 11, 0, 8, 14, 7]\n",
-      "[15, 14, 0, 8, 11, 7, 9, 16, 2, 0, 0, 13, 10, 1, 6, 0]\n",
-      "[7, 11, 3, 16, 10, 15, 8, 0, 6, 1, 14, 5, 9, 13, 4, 2]\n",
-      "[12, 0, 0, 6, 4, 13, 14, 1, 0, 9, 10, 8, 15, 0, 16, 11]\n",
-      "[8, 4, 7, 2, 0, 0, 6, 3, 5, 13, 1, 15, 0, 9, 10, 12]\n",
-      "[16, 3, 1, 0, 5, 0, 0, 0, 8, 0, 12, 9, 13, 7, 0, 6]\n",
-      "[6, 5, 0, 14, 9, 11, 0, 13, 0, 7, 2, 16, 1, 4, 0, 8]\n",
-      "[10, 0, 13, 9, 7, 1, 15, 8, 11, 4, 0, 3, 14, 2, 5, 16]\n",
-      "[5, 13, 6, 3, 16, 14, 1, 4, 9, 10, 11, 2, 8, 12, 7, 15]\n",
-      "[11, 7, 16, 12, 6, 3, 5, 0, 15, 8, 13, 14, 4, 0, 2, 1]\n",
-      "[4, 8, 0, 15, 12, 2, 11, 10, 0, 16, 7, 1, 0, 5, 13, 9]\n",
-      "[9, 10, 2, 1, 15, 8, 13, 7, 12, 5, 4, 6, 16, 0, 11, 3]\n",
-      "[14, 1, 8, 10, 0, 6, 7, 11, 16, 2, 5, 12, 3, 15, 0, 4]\n",
-      "[13, 16, 9, 7, 8, 4, 3, 5, 1, 6, 15, 10, 2, 11, 12, 14]\n",
-      "[2, 15, 11, 4, 1, 12, 16, 14, 13, 3, 9, 7, 5, 6, 8, 10]\n",
-      "[3, 6, 12, 5, 2, 9, 10, 15, 14, 11, 8, 4, 7, 0, 1, 13]\n",
-      "\n",
-      "\n",
-      "[[[1, 15, 7, 12, 8, 16, 6, 10, 5, 11, 4, 9, 14, 13, 2, 3], [9, 14, 11, 0, 4, 3, 5, 0, 13, 7, 8, 10, 1, 16, 15, 6], [10, 0, 3, 0, 7, 1, 0, 13, 6, 16, 0, 2, 8, 9, 11, 12], [13, 8, 16, 6, 2, 0, 14, 9, 3, 12, 15, 1, 10, 7, 4, 5]]]\n",
-      "[[]]\n",
-      "[[]]\n",
-      "[[]]\n",
-      "[[[9, 14, 11, 0, 4, 3, 5, 0, 13, 7, 8, 10, 1, 16, 15, 6], [10, 0, 3, 0, 7, 1, 0, 13, 6, 16, 0, 2, 8, 9, 11, 12], [13, 8, 16, 6, 2, 0, 14, 9, 3, 12, 15, 1, 10, 7, 4, 5], [3, 11, 10, 4, 0, 5, 9, 7, 16, 6, 12, 15, 0, 8, 1, 2]]]\n",
-      "[[]]\n",
-      "[[]]\n",
-      "[[]]\n",
-      "[[[10, 0, 3, 0, 7, 1, 0, 13, 6, 16, 0, 2, 8, 9, 11, 12], [13, 8, 16, 6, 2, 0, 14, 9, 3, 12, 15, 1, 10, 7, 4, 5], [3, 11, 10, 4, 0, 5, 9, 7, 16, 6, 12, 15, 0, 8, 1, 2], [5, 7, 15, 13, 0, 0, 11, 1, 14, 3, 2, 8, 6, 4, 12, 9]]]\n",
-      "[[]]\n",
-      "[[]]\n",
-      "[[]]\n",
-      "[[[13, 8, 16, 6, 2, 0, 14, 9, 3, 12, 15, 1, 10, 7, 4, 5], [3, 11, 10, 4, 0, 5, 9, 7, 16, 6, 12, 15, 0, 8, 1, 2], [5, 7, 15, 13, 0, 0, 11, 1, 14, 3, 2, 8, 6, 4, 12, 9], [2, 9, 8, 14, 6, 0, 0, 15, 1, 5, 11, 13, 7, 3, 16, 10]]]\n",
-      "[[]]\n",
-      "[[]]\n",
-      "[[]]\n"
+      "[7, 0, 2, 11, 1, 15, 7, 12, 9, 14, 11, 0, 10, 0, 3, 0, 13, 8, 16, 6]\n",
+      "[12, 6, 8, 16, 8, 16, 6, 10, 4, 3, 5, 0, 7, 1, 0, 13, 2, 0, 14, 9]\n",
+      "[15, 1, 9, 3, 5, 11, 4, 9, 13, 7, 8, 10, 6, 16, 0, 2, 3, 12, 15, 1]\n",
+      "[4, 14, 10, 13, 14, 13, 2, 3, 1, 16, 15, 6, 8, 9, 11, 12, 10, 7, 4, 5]\n",
+      "[13, 8, 16, 6, 3, 11, 10, 4]\n",
+      "[2, 0, 14, 9, 0, 5, 9, 7]\n",
+      "[3, 12, 15, 1, 16, 6, 12, 15]\n",
+      "[10, 7, 4, 5, 0, 8, 1, 2]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n",
+      "[]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.SudokuSolver at 0x110ed9220>"
+       "<__main__.SudokuSolver at 0x1173f7e60>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,17 +623,34 @@
     "    def __init__(self, puzzle_file: str):\n",
     "        with open(puzzle_file, 'r') as f:\n",
     "            rows = json.load(f)\n",
-    "            cell_length = int(sqrt(len(rows)))\n",
-    "            cols = [[row[j] for row in rows] for j in range(cell_length**2)]\n",
-    "            cells = []\n",
-    "            for j in range(cell_length**2):\n",
-    "                row_indices = range(j//cell_length, j//cell_length+cell_length)\n",
-    "                col_indices = range((j % cell_length)*cell_length,(j % cell_length)*cell_length+cell_length)\n",
+    "            array = np.array(rows, dtype=int)\n",
+    "            # Turn the 2D sudoku board into a 1D array\n",
+    "            self.__underlying_values = array.flatten()\n",
+    "            # Store a value that equals the following three equivalent things: number of rows, number of columns, and number of cells\n",
+    "            length = len(rows)\n",
+    "            # Store the indices that belong in each row\n",
+    "            self.__rows_by_indices = [[length*i + j for j in range(length)] for i in range(length)]\n",
+    "            # Store the indices that belong in each column\n",
+    "            self.__cols_by_indices = [[length*i + j for i in range(length)] for j in range(length)]\n",
+    "            # Store the indices that belong in each cell\n",
+    "            self.__cells_by_indices = []\n",
+    "            cell_length = int(sqrt(length))\n",
+    "            for j in range(length):\n",
+    "                current_row_indices = range(j//cell_length, j//cell_length+cell_length)\n",
+    "                current_col_indices = range((j % cell_length)*cell_length,(j % cell_length)*cell_length+cell_length)\n",
+    "                current_cell_indices = []\n",
+    "                for r_idx in current_row_indices:\n",
+    "                    for c_idx in current_col_indices:\n",
+    "                        current_cell_indices.append(length*r_idx + c_idx)\n",
+    "                self.__cells_by_indices.append(current_cell_indices)\n",
+    "\n",
     "            [print(row) for row in rows]\n",
+    "            # print(\"\\n\")\n",
+    "            # [print([int(self.__underlying_values[idx]) for idx in row_indices]) for row_indices in self.__rows_by_indices]\n",
+    "            # print(\"\\n\")\n",
+    "            # [print([int(self.__underlying_values[idx]) for idx in col_indices]) for col_indices in self.__cols_by_indices]\n",
     "            print(\"\\n\")\n",
-    "            [print(col) for col in cols]\n",
-    "            print(\"\\n\")\n",
-    "            [print(cell) for cell in cells]\n",
+    "            [print([int(self.__underlying_values[idx]) for idx in cell_indices]) for cell_indices in self.__cells_by_indices]\n",
     "\n",
     "SudokuSolver(puzzle_file=\"sudoku.json\")"
    ]
