rough draft sudoku solver

--- a/Constraint Satisfaction/csp.ipynb
+++ b/Constraint Satisfaction/csp.ipynb
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,14 +476,14 @@
     "\n",
     "        # For each state of the stack, remember the instance of the heap at that time, and remember the available value assignments for all variables at that time\n",
     "        stack_states = {}\n",
-    "        stack_states[0] = (copy.deepcopy(variable_queue), copy.deepcopy(self.__available_values))\n",
+    "        stack_states[0] = (self.__copy_variable_queue(variable_queue), self.__copy_all_available())\n",
     "\n",
     "        while len(assigned) < len(self.__connections):\n",
     "            next = variable_queue.get()\n",
     "            if self.__assign(id=next.get_id(), variable_queue=variable_queue):\n",
     "                assigned.add(next)\n",
     "                assigned_stack.put(next.id)\n",
-    "                stack_states[len(assigned_stack)] = (copy.deepcopy(variable_queue), copy.deepcopy(self.__available_values))\n",
+    "                stack_states[len(assigned_stack)] = (copy.deepcopy(variable_queue), self.__copy_all_available())\n",
     "            else:\n",
     "                prev_assigned = assigned_stack.get()\n",
     "                prev_assignment = self.__assigned_values[prev_assigned]\n",
@@ -499,7 +499,7 @@
     "        Assign any value that works to a given node, and update all other nodes' available values according to the arc consistency of this graph.\n",
     "        If no value works for the assignment, return False\n",
     "        \"\"\"\n",
-    "        initial_options = copy.deepcopy(self.__available_values[id])\n",
+    "        initial_options = self.__copy_options(id=id)\n",
     "        for option in initial_options:\n",
     "            # Try assigning this value to the variable\n",
     "            self.__assigned_values[id] = option\n",
@@ -509,7 +509,7 @@
     "\n",
     "            # For each id, remember the variables removed from it\n",
     "            removed = {}\n",
-    "            if self.__update_available(id=id, removed_vars=removed):\n",
+    "            if self.__update_available(id=id, removed=removed):\n",
     "                # As far as we know according to our arc consistency, we haven't backed ourselves into an unsolvable assignment set yet...\n",
     "                for updated_node in removed.keys():\n",
     "                    # Some variables have had their available assignments updated, which may have INCREASED their priority\n",
@@ -525,7 +525,40 @@
     "        # No assignments worked\n",
     "        return False\n",
     "    \n",
-    "    def __update_available(self, id: int) -> bool:\n",
+    "    def __copy_options(self, id: int) -> set[int]:\n",
+    "        \"\"\"\n",
+    "        Helper method to copy the options associated with a particular variable\n",
+    "        \"\"\"\n",
+    "        copy = set()\n",
+    "        for v in self.__available_values[id]:\n",
+    "            copy.add(v)\n",
+    "        return copy\n",
+    "    \n",
+    "    def __copy_all_available(self) -> dict[int, set[int]]:\n",
+    "        \"\"\"\n",
+    "        Helper method to return a copy of all variables' value options\n",
+    "        \"\"\"\n",
+    "        copy = {}\n",
+    "        for id in self.__available_values.keys():\n",
+    "            copy[id] = self.__copy_options(id)\n",
+    "        return copy\n",
+    "\n",
+    "    def __copy_variable_queue(self, variable_queue: PriorityQueue[__Variable]) -> PriorityQueue[__Variable]:\n",
+    "        \"\"\"\n",
+    "        Helper method to return a copy of a priority queue\n",
+    "        \"\"\"\n",
+    "        copy = PriorityQueue()\n",
+    "        temp = PriorityQueue()\n",
+    "        while not variable_queue.empty():\n",
+    "            next = variable_queue.get()\n",
+    "            copy.put(next)\n",
+    "            temp.put(next)\n",
+    "        # Restore the original queue\n",
+    "        while not temp.empty():\n",
+    "            variable_queue.put(temp.get())\n",
+    "        return copy\n",
+    "\n",
+    "    def __update_available(self, id: int, removed: dict[int, set[int]]) -> bool:\n",
     "        \"\"\"\n",
     "        Given a node that has just been assigned a value, update all neighbors' available values according to our arc consistency, and return False if any problems occur.\n",
     "        \"\"\"\n",
@@ -535,29 +568,35 @@
     "        elif self.__consistency == Consistency.FORWARD_CHECK:\n",
     "            # Forward checking\n",
     "            for neighbor in self.__connections[id]:\n",
-    "                removed_vars = self.__consistency_checker(self.__available_values[id], self.__available_values[neighbor])\n",
-    "                for var in removed_vars:\n",
+    "                to_remove = self.__consistency_checker(self.__available_values[id], self.__available_values[neighbor])\n",
+    "                for var in to_remove:\n",
     "                    self.__available_values[neighbor].remove(var)\n",
+    "                    if neighbor not in removed.keys():\n",
+    "                        removed[neighbor] = set()\n",
+    "                    removed[neighbor].add(var)\n",
     "                if len(self.__available_values[neighbor]) == 0:\n",
     "                    # The neighbor RAN OUT of options to be assigned to it - the most previous variable assignment for the node of the input id did not work\n",
     "                    return False\n",
     "        else:\n",
     "            # AC3 consistency\n",
     "            edge_queue = Queue()\n",
-    "            for neighbor in self.__connections[id].connections:\n",
+    "            for neighbor in self.__connections[id]:\n",
     "                edge_queue.put((id, neighbor))\n",
-    "            while len(edge_queue) > 0:\n",
+    "            while not edge_queue.empty():\n",
     "                next_edge = edge_queue.get()\n",
     "                current, neighbor = next_edge[0], next_edge[1]\n",
-    "                removed_vars = self.__consistency_checker(self.__connections[current].options, self.__connections[neighbor].options)\n",
-    "                for var in removed_vars:\n",
+    "                to_remove = self.__consistency_checker(self.__available_values[current], self.__available_values[neighbor])\n",
+    "                for var in to_remove:\n",
     "                    self.__available_values[neighbor].remove(var)\n",
+    "                    if neighbor not in removed.keys():\n",
+    "                        removed[neighbor] = set()\n",
+    "                    removed[neighbor].add(var)\n",
     "                if len(self.__available_values[neighbor]) == 0:\n",
     "                    # The neighbor RAN OUT of options to be assigned to it - the most previous variable assignment for the node of the input id did not work\n",
     "                    return False\n",
-    "                else:\n",
+    "                elif len(to_remove) > 0:\n",
     "                    # Continue the algorithm\n",
-    "                    for other_neighbor in self.__connections[neighbor].connections:\n",
+    "                    for other_neighbor in self.__connections[neighbor]:\n",
     "                        if other_neighbor != current:\n",
     "                            edge_queue.put((neighbor, other_neighbor))\n",
     "\n",
@@ -570,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,28 +697,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "cannot pickle '_thread.lock' object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m sudoku_solver \u001b[38;5;241m=\u001b[39m SudokuSolver(puzzle_file\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msudoku.json\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m----> 2\u001b[0m \u001b[43msudoku_solver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msolve\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconsistency\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mConsistency\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mAC3\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mheuristic\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mCSPHeuristic\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mMIN_REMAINING_AND_DEGREE\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[11], line 57\u001b[0m, in \u001b[0;36mSudokuSolver.solve\u001b[0;34m(self, consistency, heuristic)\u001b[0m\n\u001b[1;32m     54\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__connect_all(cell)\n\u001b[1;32m     56\u001b[0m \u001b[38;5;66;03m# Let the graph do the solving\u001b[39;00m\n\u001b[0;32m---> 57\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m__graph\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msolve_graph\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     59\u001b[0m \u001b[38;5;66;03m# Now display all the assigned values\u001b[39;00m\n\u001b[1;32m     60\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__rows_by_indices:\n",
-      "Cell \u001b[0;32mIn[10], line 119\u001b[0m, in \u001b[0;36mCSPGraph.solve_graph\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    117\u001b[0m \u001b[38;5;66;03m# For each state of the stack, remember the instance of the heap at that time, and remember the available value assignments for all variables at that time\u001b[39;00m\n\u001b[1;32m    118\u001b[0m stack_states \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m--> 119\u001b[0m stack_states[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m=\u001b[39m (\u001b[43mcopy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdeepcopy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvariable_queue\u001b[49m\u001b[43m)\u001b[49m, copy\u001b[38;5;241m.\u001b[39mdeepcopy(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__available_values))\n\u001b[1;32m    121\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(assigned) \u001b[38;5;241m<\u001b[39m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m__connections):\n\u001b[1;32m    122\u001b[0m     \u001b[38;5;28mnext\u001b[39m \u001b[38;5;241m=\u001b[39m variable_queue\u001b[38;5;241m.\u001b[39mget()\n",
-      "File \u001b[0;32m/usr/local/Cellar/python@3.12/3.12.6/Frameworks/Python.framework/Versions/3.12/lib/python3.12/copy.py:162\u001b[0m, in \u001b[0;36mdeepcopy\u001b[0;34m(x, memo, _nil)\u001b[0m\n\u001b[1;32m    160\u001b[0m                 y \u001b[38;5;241m=\u001b[39m x\n\u001b[1;32m    161\u001b[0m             \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 162\u001b[0m                 y \u001b[38;5;241m=\u001b[39m \u001b[43m_reconstruct\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmemo\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mrv\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    164\u001b[0m \u001b[38;5;66;03m# If is its own copy, don't memoize.\u001b[39;00m\n\u001b[1;32m    165\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m y \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m x:\n",
-      "File \u001b[0;32m/usr/local/Cellar/python@3.12/3.12.6/Frameworks/Python.framework/Versions/3.12/lib/python3.12/copy.py:259\u001b[0m, in \u001b[0;36m_reconstruct\u001b[0;34m(x, memo, func, args, state, listiter, dictiter, deepcopy)\u001b[0m\n\u001b[1;32m    257\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m state \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    258\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m deep:\n\u001b[0;32m--> 259\u001b[0m         state \u001b[38;5;241m=\u001b[39m \u001b[43mdeepcopy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmemo\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    260\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(y, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m__setstate__\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m    261\u001b[0m         y\u001b[38;5;241m.\u001b[39m__setstate__(state)\n",
-      "File \u001b[0;32m/usr/local/Cellar/python@3.12/3.12.6/Frameworks/Python.framework/Versions/3.12/lib/python3.12/copy.py:136\u001b[0m, in \u001b[0;36mdeepcopy\u001b[0;34m(x, memo, _nil)\u001b[0m\n\u001b[1;32m    134\u001b[0m copier \u001b[38;5;241m=\u001b[39m _deepcopy_dispatch\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;28mcls\u001b[39m)\n\u001b[1;32m    135\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m copier \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 136\u001b[0m     y \u001b[38;5;241m=\u001b[39m \u001b[43mcopier\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmemo\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    137\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    138\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28missubclass\u001b[39m(\u001b[38;5;28mcls\u001b[39m, \u001b[38;5;28mtype\u001b[39m):\n",
-      "File \u001b[0;32m/usr/local/Cellar/python@3.12/3.12.6/Frameworks/Python.framework/Versions/3.12/lib/python3.12/copy.py:221\u001b[0m, in \u001b[0;36m_deepcopy_dict\u001b[0;34m(x, memo, deepcopy)\u001b[0m\n\u001b[1;32m    219\u001b[0m memo[\u001b[38;5;28mid\u001b[39m(x)] \u001b[38;5;241m=\u001b[39m y\n\u001b[1;32m    220\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m key, value \u001b[38;5;129;01min\u001b[39;00m x\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m--> 221\u001b[0m     y[deepcopy(key, memo)] \u001b[38;5;241m=\u001b[39m \u001b[43mdeepcopy\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmemo\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    222\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m y\n",
-      "File \u001b[0;32m/usr/local/Cellar/python@3.12/3.12.6/Frameworks/Python.framework/Versions/3.12/lib/python3.12/copy.py:151\u001b[0m, in \u001b[0;36mdeepcopy\u001b[0;34m(x, memo, _nil)\u001b[0m\n\u001b[1;32m    149\u001b[0m reductor \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(x, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__reduce_ex__\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n\u001b[1;32m    150\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m reductor \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 151\u001b[0m     rv \u001b[38;5;241m=\u001b[39m \u001b[43mreductor\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    152\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    153\u001b[0m     reductor \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mgetattr\u001b[39m(x, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m__reduce__\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: cannot pickle '_thread.lock' object"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sudoku_solver = SudokuSolver(puzzle_file=\"sudoku.json\")\n",
     "sudoku_solver.solve(consistency=Consistency.AC3, heuristic=CSPHeuristic.MIN_REMAINING_AND_DEGREE)"
