did some refactoring and cleanup and rough draph gcp implementation

--- a/KNN and Local Search/local_search.ipynb
+++ b/KNN and Local Search/local_search.ipynb
@@ -428,12 +428,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from abc import abstractmethod\n",
+    "from abc import ABC, abstractmethod\n",
     "import matplotlib.pyplot as plt\n",
-    "from mpl_toolkits import mplot3d\n",
     "from matplotlib import cm\n",
     "\n",
-    "class FunctionOptimizer:\n",
+    "class FunctionOptimizer(ABC):\n",
     "    \"\"\"We will extend this class in two ways - a Simulated Annealing Solver and Genetic Algorithm Solver\n",
     "    \"\"\"\n",
     "\n",
@@ -1128,7 +1127,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ai_proj_1",
+   "display_name": "ai_env",
    "language": "python",
    "name": "python3"
   },
