--- a/KNN and Local Search/knn.ipynb
+++ b/KNN and Local Search/knn.ipynb
@@ -486,7 +486,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ai_proj_1",
+   "display_name": "ai_env",
    "language": "python",
    "name": "python3"
   },
